--- a/style.css
+++ b/style.css
@@ -2,15 +2,13 @@
 :root {
   --largura-m: 2200px;
   --gradiente: 90deg, #ff0000, #f66008;
-  --gradient-click: 90deg, #ff00008a, #9b3b0491
+  --gradient-click: 90deg, #ff00008a, #9b3b0491;
+  --azul: #000077;
 }
 * {
   padding: 0;
   margin: 0;
   font-family: "Sora", sans-serif;
-}
-body *{
-  /* border: 1px solid ; */
 }
 header {
   max-width: var(--largura-m);
@@ -24,35 +22,31 @@ ul {
 li {
   margin: 0 15px;
 }
-/* header *{
-  border: 1px solid;
-  margin: 2px ;
-  padding: 2px;
-} */
-details{
-  
-}
 nav {
   max-width: var(--largura-m);
   margin: auto;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 10px 30px;
   box-shadow: 10px 0 10px 5px #00000028;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: #fff;
+  max-width: var(--largura-m);
 }
-a{
+a {
   text-decoration: none;
   color: #000;
 }
-.menu{
-  /* width: 100%; */
+.menu {
   height: auto;
   box-sizing: border-box;
   display: none;
 }
-ul > li >a> button {
+ul > li > a > button {
   margin-top: -30px;
   padding: 5px 20px;
   background: linear-gradient(var(--gradiente));
@@ -61,21 +55,21 @@ ul > li >a> button {
   font-weight: 500;
   border-radius: 5px;
 }
-.menu>ul>li:hover{
+.menu > ul > li:hover {
   color: #005577;
   text-decoration: underline;
   cursor: pointer;
 }
-ul > li >a> button:active{
+ul > li > a > button:active {
   background: linear-gradient(var(--gradient-click));
   cursor: pointer;
 }
-.logo>h2{
-  color: #000077;
+.logo > h2 {
+  color: var(--azul);
   font-size: 1em;
 }
 .baner {
-  margin-top: 50px;
+  margin-top: 10px;
   position: relative;
   width: 100%;
   height: auto;
@@ -87,13 +81,15 @@ ul > li >a> button:active{
   box-sizing: border-box;
 }
 .chamada {
-  /* padding: 0 80px; */
+  padding: 0 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 20px;
   box-sizing: border-box;
-
+  background-image: url("./arquivos/cartaz3.png");
+  background-size: contain;
+  overflow: hidden;
 }
 .chamada > h1 {
   font-size: 2em;
@@ -107,11 +103,11 @@ ul > li >a> button:active{
   color: #00000090;
   font-weight: 500;
   font-size: 1em;
+  margin-bottom: 15px;
 }
-.chamada > button {
+.chamada > a>button {
   min-width: 150px;
-  margin: 0 20px;
-  /* max-width: 300px; */
+  margin: 0 10px;
   border-radius: 5px;
   border: transparent;
   background: linear-gradient(var(--gradiente));
@@ -121,37 +117,332 @@ ul > li >a> button:active{
 
   animation: saltar 1s infinite;
 }
-.chamada > button:active {
+.chamada > a>button:active {
   background: linear-gradient(var(--gradient-click));
   cursor: pointer;
   animation: teste;
-
 }
 .cartaz {
   box-sizing: border-box;
   width: 100%;
   height: auto;
+  background-color: #fff;
 }
 .cartaz > img {
   width: 100%;
 }
-.section{
+.section {
   padding: 50px 0;
   width: 100%;
   height: auto;
+  margin: auto;
 }
 main {
   max-width: var(--largura-m);
   margin: auto;
 }
-@keyframes saltar{
-  0%{
+section {
+  padding: 20px;
+}
+#nossos {
+  text-align: center;
+  color: var(--azul);
+  font-size: 1.6em;
+}
+.cards {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.card {
+  width: 100%;
+  min-height: 300px;
+  max-height: 420px;
+  background-color: #fff;
+  box-shadow: 5px 5px 10px 5px #0000001f;
+  border-radius: 10px;
+  margin: 5px 5px;
+  border: 1px solid #0000001f;
+  box-sizing: border-box;
+  padding: 20px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  flex-grow: 1;
+}
+.card > h4 {
+  color: var(--azul);
+  font-size: 1.4em;
+  /* border-bottom: 2px solid var(--azul); */
+}
+.card > p {
+  padding-top: 20px;
+}
+.card:hover {
+  color: #fff;
+  background-color: var(--azul);
+}
+
+.card:hover > .card_header {
+  color: #fff;
+}
+.card:hover > a > button {
+  color: #fff;
+  border: 1px solid #fff;
+}
+.card:hover > .card_header > #redes {
+  background-image: url("./arquivos/icons_branco/4.png");
+}
+.card:hover > .card_header > #sites {
+  background-image: url("./arquivos/icons_branco/5.png");
+}
+.card:hover > .card_header > #local {
+  background-image: url("./arquivos/icons_branco/6.png");
+}
+.card:hover > .card_header > #email {
+  background-image: url("./arquivos/icons_branco/7.png");
+}
+.card:hover > .card_header > #conteudo {
+  background-image: url("./arquivos/icons_branco/8.png");
+}
+.card:hover > .card_header > #google {
+  background-image: url("./arquivos/icons_branco/9.png");
+}
+.card_header {
+  display: flex;
+  width: 100%;
+  height: auto;
+  color: #000;
+  gap: 10px;
+}
+.card_header > h4 {
+  display: inline-block;
+  font-size: 1em;
+}
+button{
+  cursor: pointer;
+}
+.card_header > img {
+  width: 70px;
+  height: 70px;
+  scale: 1.2;
+}
+.icons {
+  width: 80px;
+  height: 80px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.card > a {
+  margin-top: 20px;
+  width: 50%;
+  display: inline-block;
+  align-self: center;
+}
+.card > a > button {
+  width: 100%;
+  margin: auto;
+  padding: 10px;
+  background: transparent;
+  border: 1px solid var(--azul);
+  color: var(--azul);
+  align-self: center;
+  border-radius: 5px;
+}
+section > .chamada > h1 {
+  color: var(--azul);
+  background: none;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--azul);
+  display: inline;
+}
+.chamada > ul {
+  display: flex;
+  flex-direction: column;
+  list-style: square;
+  gap: 10px;
+}
+
+#button2 {
+  width: 100%;
+  background: transparent;
+  animation: none;
+  background-color: var(--azul);
+  border: 1px solid #fff;
+  color: #fff;
+  margin: 0;
+}
+#parceria:active {
+  background-color: #fff;
+  color: #000077;
+  border: 1px solid var(--azul);
+}
+#redes {
+  background-image: url("./arquivos/icons/4.png");
+}
+#sites {
+  background-image: url("./arquivos/icons/5.png");
+}
+#local {
+  background-image: url("./arquivos/icons/6.png");
+}
+#email {
+  background-image: url("./arquivos/icons/7.png");
+}
+#conteudo {
+  background-image: url("./arquivos/icons/8.png");
+  scale: 1.3;
+}
+#google {
+  background-image: url("./arquivos/icons/9.png");
+  /* scale: 1.5; */
+  /* position: relative;
+  top: 10px; */
+}
+section>.chamada>button{
+  max-width: 400px;
+}
+footer{
+  background: linear-gradient(var(--gradiente));
+  width: 100%;
+  padding: 30px;
+  height: auto;
+  text-align: center;
+  color: #fff;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@keyframes saltar {
+  0% {
     scale: 1;
   }
-  50%{
+  50% {
     scale: 1.1;
   }
-  100%{
+  100% {
     scale: 1;
   }
+}
+
+@media screen and (min-width: 500px) {
+  body{
+    font-size: 1em;
+  }
+  
+}
+@media screen and (min-width: 900px) {
+  body{
+    font-size: 1.1em;
+  }
+  .baner>.chamada>h1{
+    font-size: 2.5em;
+  }
+  .chamada>button{
+    font-size: 0.1em;
+    margin: 10px;
+  }
+  .menus{
+    display: none;
+  }
+  .menu{
+    display: inline-block;
+  }
+
+}
+@media screen and (min-width: 1200px) {
+  body{
+    /* font-size: 1.2em; */
+  }
+  .baner{
+    padding-top: 0;
+    /* margin-top: 0; */
+    flex-direction: row-reverse;
+  }
+  section{
+    margin: 100px 0;
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+    padding: 20px 50px ;
+  }
+  section>.cartaz{
+
+    width: 50%;
+  }
+  #section2{
+    flex-direction: row-reverse;
+  }
+  #section4{
+    flex-direction: row-reverse;
+    >.cartaz{
+      width: 70%;
+    }
+  }
+
+  #section5{
+    /* gap: 10px; */
+  }
+  .chamada{
+    width: 60%;
+    margin: 30px 20px;
+  }
+  .cartaz{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .chamada>a>button{
+    font-size: 0.8em;
+    width: 400px;
+    padding: 10px;
+    border-radius: 10px;
+  }
+  .cards{
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .card{
+    width: 250px;
+    height: 420px;
+    font-size: 1em;
+  }
+  
+
+  
+}
+@media screen and (min-width: 1900px) {
+  body{
+    /* font-size: 1.3em; */
+  }
+  .baner>.chamada>h1{
+    font-size: 3.2em;
+  }
+  .baner>.chamada>p{
+    font-size: 1.2em;
+  }
+  .chamada>button{
+    font-size: 1.1em;
+    padding: 15px;
+  }
+  .card{
+    font-size: 1em;
+    width: 500px;
+    height: 400px;
+    font-size: 1.2em;
+  }
+
+  
 }
