--- a/style.css
+++ b/style.css
@@ -86,6 +86,18 @@ ul > li > a > button:active {
   color: var(--azul);
   font-size: 1.2em;
 }
+#whats{
+  transition-duration: 0.3s;
+  width: 60px;
+  position:fixed;
+  top:70px;
+  left: 15px;
+  cursor: pointer;
+
+}
+#whats:hover{
+  scale: 0.8;
+}
 .baner {
   margin-top: 10px;
   position: relative;
@@ -167,7 +179,7 @@ section {
 #chamada1>a>button{
   margin: 10px;
 }
-#nossos {
+.nossos {
   text-align: center;
   color: var(--azul);
   font-size: 1.6em;
