--- a/style.css
+++ b/style.css
@@ -89,11 +89,57 @@ ul > li > a > button:active {
 #whats{
   transition-duration: 0.3s;
   width: 60px;
-  position:fixed;
-  top:70px;
-  left: 15px;
-  cursor: pointer;
+  opacity: 1;
 
+}
+#description_w{
+  display: none;
+  font-size: 0.6em;
+  color: green;
+  color: transparent;
+  transition: 2s;font-weight: 500;
+  transition-delay: 1s;
+}
+.ateendente{
+  position:fixed;
+  bottom:70px;
+  right: 15px;
+  cursor: pointer;
+  transition-duration: 800ms;
+  width: 60px;
+  height: 30px;
+  padding: 5px;
+
+
+}
+.ateendente:hover{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 210px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid green;
+  border-radius: 40px;
+  bottom:70px;
+}
+.ateendente:hover>a>#whats{
+  width:30px;
+  height: 30px;
+}
+.ateendente>a{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.ateendente:hover>a>#description_w{
+  transition: 1s;
+  display: inline-block;
+  color: green;
 }
 #whats:hover{
   scale: 0.8;
