--- a/style.css
+++ b/style.css
@@ -86,6 +86,23 @@ ul > li > a > button:active {
   color: var(--azul);
   font-size: 1.2em;
 }
+marquee{
+  height: 150px;
+  /* background-color: gray; */
+  /* display: flex; */
+}
+marquee>img{
+  
+  /* width: 100px;
+  height: 100px; */
+  /* width: 300px; */
+  /* margin-top: -100px; */
+  /* width: 200px;
+  z-index: 20;
+  position: absolute; */
+  height: 150px;
+  margin-right: 10%;
+}
 #whats{
   transition-duration: 0.3s;
   width: 60px;
@@ -525,7 +542,7 @@ footer{
 } */
 @media screen and (min-width: 2000px) {
   body{
-    font-size: 1.6em;
+    /* font-size: 1.6em; */
   }
   .baner>.chamada>h1{
     font-size: 3.2em;
