--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ marquee>img{
   bottom:70px;
   right: 15px;
   cursor: pointer;
-  transition-duration: 800ms;
+  transition-duration: 200ms;
   width: 60px;
   height: 30px;
   padding: 5px;
@@ -137,7 +137,7 @@ marquee>img{
   width: 210px;
   height: 30px;
   background-color: #fff;
-  border: 1px solid green;
+  border: 1px solid rgba(0, 128, 0, 0.272);
   border-radius: 40px;
   bottom:70px;
 }
@@ -154,7 +154,7 @@ marquee>img{
   gap: 10px;
 }
 .ateendente:hover>a>#description_w{
-  transition: 1s;
+  transition: 2s;
   display: inline-block;
   color: green;
 }
